--- a/blog/templates/blog/notice_detail.html
+++ b/blog/templates/blog/notice_detail.html
@@ -2,10 +2,29 @@
 
 
 {% block detail %}
+<div class = "container">
+	<div class="row">
+		<div class="col-md-36 col-sm-36 col-md-offset-3">
+			<div class="bolg__item">
+				<div class="blog__header">
+					<h1 class="blog__title">
+						{{ object.title }}
+					</h1>
+					<ul class="blog__info">
+						<li><span class="glyphicon glyphicon-user"></span>&nbsp;{{ object.author }}</li>
+						<li><i class="glyphicon glyphicon-calendar"></i>&nbsp;{{ object.updated_at}}</li>
+					</ul>
+				</div>
+				<div class="blog__body">
+					<p>
+					{% autoescape off %}
+						{{ object.content|safe }}
+					{% endautoescape %}
 
-{{ object.title }}
-{{ object.author }}
-{{ object.created_at }}
-{{ object.content|safe }}
-
-{% endblock detail %}
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+{% endblock %}
