--- a/blog/templates/blog/review_detail.html
+++ b/blog/templates/blog/review_detail.html
@@ -1,10 +1,49 @@
-{% extends "blog/detail.html" %}
+{% extends "blog/review_list.html" %}
+{% load staticfiles %}
 
-{% block detail %}
-
+<!--
+{% block object_title %}
 {{ object.title }}
+{% endblock %}
+
+{% block object_author %}
 {{ object.author }}
+{% endblock %}
+
+{% block object_created_at %}
 {{ object.created_at }}
+{% endblock %}
+
+{% block object_content %}
 {{ object.content|safe }}
 
-{% endblock detail %}
+{% endblock %}
+-->
+{% block detail %}
+<div class = "container">
+	<div class="row">
+		<div class="col-md-36 col-sm-36 col-md-offset-3">
+			<div class="bolg__item">
+				<div class="blog__header">
+					<h1 class="blog__title">
+						{{ object.title }}
+					</h1>
+					<ul class="blog__info">
+						<li><span class="glyphicon glyphicon-user"></span>&nbsp;{{ object.author }}</li>
+						<li><i class="glyphicon glyphicon-calendar"></i>&nbsp;{{ object.updated_at}}</li>
+					</ul>
+				</div>
+				<div class="blog__body">
+					<p>
+					{% autoescape off %}
+						{{ object.content|safe }}
+					{% endautoescape %}
+
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+{% endblock %}
+
