--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -113,6 +113,10 @@ html, body{
 	padding-bottom:60px;
 }
 
+.lightgraybg{
+	background-color:lightgray;
+}
+
 
 
 /* margin and padding when it is xs */
