--- a/static/css/style.css
+++ b/static/css/style.css
@@ -156,7 +156,10 @@ body {
     margin-top: 10px;
     padding-left: 0; } }
 #menu-content > li > a {
-  font-size: 11pt; }
+  font-size: 11pt;
+  font-weight: 400; }
+#menu-content ul a {
+  font-weight: 300; }
 
 @media screen and (max-width: 991px) {
   .left-navbar {
