오시는길 마진 제거

--- a/main/templates/intro/doctor.html
+++ b/main/templates/intro/doctor.html
@@ -1,2 +1,11 @@
 {% extends "../detailpage.html" %}
 {% load staticfiles %}
+
+
+{% block javascript %}
+<script type="text/javascript">
+	$(document).ready(function(){
+		activelist('#intro2', '#intro')
+	});
+</script>
+{% endblock javascript %}
