--- a/main/templates/intro/map.html
+++ b/main/templates/intro/map.html
@@ -26,7 +26,7 @@ HOME > 병원소개 > 오시는 길
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/intro/map2s.jpeg' %}" class="img-responsive content-border2 paddingtop20-xs" style="margin: 10px;">
+	<img src="{% static 'img/intro/map2s.jpeg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
 
 
