게시판 수정 및 삭제 기능 완료

--- a/blog/templates/blog/beforeafter_detail.html
+++ b/blog/templates/blog/beforeafter_detail.html
@@ -2,8 +2,7 @@
 
 {% block detail %}
 <div class = "container">
-	<div class="row">
-		<div class="col-md-36 col-sm-36 col-md-offset-3">
+		<div class="col-md-36 col-sm-36">
 			<div class="bolg__item">
 				<div class="blog__header">
 					<h1 class="blog__title">
@@ -12,6 +11,13 @@
 					<ul class="blog__info">
 						<li><span class="glyphicon glyphicon-user"></span>&nbsp;{{ object.author }}</li>
 						<li><i class="glyphicon glyphicon-calendar"></i>&nbsp;{{ object.updated_at}}</li>
+						{% if object.author == request.user %}
+							<li><a href="{% url 'blog:beforeafter_update' pk=object.pk %}" class="btn btn-xs btn-info">수정</a></li>
+							<li><form action="{% url 'blog:beforeafter_delete' pk=object.pk %}" method="post" class="text-center" >
+								{% csrf_token %}
+								<input type="button" class="btn btn-xs btn-info" value="삭제" onclick="javascript:if(confirm('삭제하시겠습니까?')) {this.form.submit();} else {return;}">
+							</form></li>
+						{% endif %}
 					</ul>
 				</div>
 				<div class="blog__body">
@@ -24,6 +30,5 @@
 				</div>
 			</div>
 		</div>
-	</div>
 </div>
 {% endblock %}
