--- a/suclinic/templates/left.navbar.1.html
+++ b/suclinic/templates/left.navbar.1.html
@@ -18,7 +18,7 @@
 
 		<ul id="menu-content" class="menu-content collapse out">
 
-			<li data-toggle="collapse" class="collapsed hidden-sm hidden-xs" style="display: none;">
+			<li data-toggle="collapse" class="collapsed" style="display: none;">
 				<a href="javascript:void(0)">병원 소개</a>
 			</li>
 
