--- a/suclinic/templates/left.navbar.1.html
+++ b/suclinic/templates/left.navbar.1.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <div class="left-navbar nav-side-menu">
 	<div style="text-align: center;">
-		<button class="navbar-toggle" data-target="#menu-content" data-toggle="collapse" style="float: left; width: 30px;padding: 0; border: none; margin: 12px;">
+		<button class="navbar-toggle" data-target="#menu-content" data-toggle="collapse" style="float: left; width: 30px;padding: 0; border: none; margin: 10px;">
 			<span class="sr-only">Menu</span>
 			<img src="{% static 'img/icon-bar.png' %}" class="img-responsive">
 		</button>
@@ -23,7 +23,7 @@
 			</li>
 
 
-			<li data-toggle="collapse" data-target="#intro" class="collapsed">
+			<li data-toggle="collapse" data-target="#intro" class="collapsed clearfix">
 				<a href="#">병원소개<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="intro">
