소개 페이지에 헤더만 넣음

--- a/main/templates/intro/doctor.html
+++ b/main/templates/intro/doctor.html
@@ -1,6 +1,21 @@
 {% extends "../detailpage.html" %}
 {% load staticfiles %}
 
+{% block semi_title %}
+의료진 소개
+{% endblock %}
+
+{% block sub_title %}
+HOME > 병원소개 > 의료진 소개
+{% endblock %}
+
+{% block main %}
+	<img src="{% static 'img/intro/doctor1.jpg' %}" class="img-responsive content-border1 paddingtop60">
+{% endblock %}
+
+{% block mainsm %}
+	<img src="{% static 'img/intro/doctor1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
+{% endblock %}
 
 {% block javascript %}
 <script type="text/javascript">
