--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,7 +159,8 @@ body {
   font-size: 11pt;
   font-weight: 400; }
 #menu-content ul a {
-  font-weight: 300; }
+  font-weight: 300;
+  font-size: 10pt; }
 
 @media screen and (max-width: 991px) {
   .left-navbar {
