--- a/suclinic/templates/footer.html
+++ b/suclinic/templates/footer.html
@@ -8,7 +8,12 @@
 				<li class="col-sm-8"><img src="{% static 'img/footer_2.png' %}" class="img-responsive minmax"></li>
 				<li class="col-sm-8 "><a href="#"><img src="{% static 'img/footer_3.png' %}" class="img-responsive minmax"></a></li>
 				<li class="col-sm-8 "><a href="#"><img src="{% static 'img/footer_4.png' %}" class="img-responsive minmax"></a></li>
-				<li class="col-sm-10"><img src="{% static 'img/footer_5.png' %}" class="img-responsive minmax"></li>
+				<li class="col-sm-10" style="border-left:1px solid gray; margin-top:15px;"><img src="{% static 'img/footer_5.png' %}" class="img-responsive minmax">
+					<ul class="footer_nav center-text" style="float: right; margin-right:14px;">
+			       <li><a href="#">개인정보취급방침<span class="vertical-bar"></span></a></li>
+			       <li><a href="#">회원약관</a></li>
+			    </ul>
+				</li>
 			</ul>
 			</div>
 
