--- a/suclinic/templates/footer.html
+++ b/suclinic/templates/footer.html
@@ -9,9 +9,9 @@
 				<li class="col-sm-8 "><a href="#"><img src="{% static 'img/footer_3.png' %}" class="img-responsive minmax"></a></li>
 				<li class="col-sm-8 "><a href="#"><img src="{% static 'img/footer_4.png' %}" class="img-responsive minmax"></a></li>
 				<li class="col-sm-10" style="border-left:1px solid gray; margin-top:15px;"><img src="{% static 'img/footer_5.png' %}" class="img-responsive minmax">
-					<ul class="footer_nav center-text" style="float: right; margin-right:14px;">
-			       <li><a href="#">개인정보취급방침<span class="vertical-bar"></span></a></li>
-			       <li><a href="#">회원약관</a></li>
+					<ul class="footer_nav center-text" style="float: right; margin-right:15px;">
+			       <li><a href="#" style="font-size: 7pt;">개인정보취급방침<span class="vertical-bar"></span></a></li>
+			       <li><a href="#" style="font-size: 7pt;">회원약관</a></li>
 			    </ul>
 				</li>
 			</ul>
