의료진 소개 추가 및 수클리닉 소개 제거

--- a/main/templates/intro/doctor.html
+++ b/main/templates/intro/doctor.html
@@ -17,6 +17,14 @@ HOME > 병원소개 > 의료진 소개
 	<img src="{% static 'img/intro/doctor1s.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
+{% block detail %}
+	<img src="{% static 'img/intro/doctor2.jpeg' %}" class="img-responsive content-border2 paddingtop60">
+{% endblock %}
+
+{% block detailsm %}
+	<img src="{% static 'img/intro/doctor2s.jpeg' %}" class="img-responsive content-border2 paddingtop20-xs">
+{% endblock %}
+
 {% block javascript %}
 <script type="text/javascript">
 	$(document).ready(function(){
