--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -10,14 +10,14 @@
     	</div>
 
 			<div class="col-sm-42 md30 hidden-xs">
-				<img src="{% static 'img/main/visual4.jpg' %}" class="img-responsive minmax">
+				<a href="{% url 'main:coolshaping' %}"><img src="{% static 'img/main/visual4.jpg' %}" class="img-responsive minmax"></a>
 			</div>
 		</div>
 		<div class="col-sm-42 col-xs-42">
 			<div class="col-sm-42 md69">
-				<img src="{% static 'img/main/visual5.jpg' %}" class="img-responsive col-sm-14 col-xs-14">
-				<img src="{% static 'img/main/visual6.jpg' %}" class="img-responsive col-sm-14 col-xs-14">
-				<img src="{% static 'img/main/visual7.jpg' %}" class="img-responsive col-sm-14 col-xs-14">
+				<a href="{% url 'main:highnose' %}"><img src="{% static 'img/main/visual5.jpg' %}" class="img-responsive col-sm-14 col-xs-14"></a>
+				<a href="{% url 'main:cinderella' %}"><img src="{% static 'img/main/visual6.jpg' %}" class="img-responsive col-sm-14 col-xs-14"></a>
+				<a href="{% url 'main:prp' %}"><img src="{% static 'img/main/visual7.jpg' %}" class="img-responsive col-sm-14 col-xs-14"></a>
 			</div>
 			<div class="col-xs-42 visible-xs" style="display:none;">
 				<img src="{% static 'img/main/visual4_s.jpeg' %}" class="img-responsive">
