네비바에 괄호삭제

--- a/suclinic/templates/left.navbar.1.html
+++ b/suclinic/templates/left.navbar.1.html
@@ -57,7 +57,7 @@
 			</li>
 			<ul class="sub-menu collapse" id="scar">
 				<li id="scar1"><a href="{% url 'main:legato' %}">레가토</a></li>
-				<li id="scar2"><a href="{% url 'main:prp' %}">PRP(자가혈)</a></li>
+				<li id="scar2"><a href="{% url 'main:prp' %}">PRP</a></li>
 				<li id="scar3"><a href="{% url 'main:tera' %}">테라필</a></li>
 			</ul>
 
