메인에 못다한 링크 추가

--- a/blog/templates/blog/beforeafter_list.html
+++ b/blog/templates/blog/beforeafter_list.html
@@ -52,3 +52,12 @@
 		</div>
 	{% endif %}
 {% endblock %}
+
+{% block javascript %}
+<script type="text/javascript">
+	$(document).ready(function(){
+		console.log('hi');
+		activelist('#community2', '#community')
+	});
+</script>
+{% endblock javascript %}
