--- a/main/templates/main_imgslider2.html
+++ b/main/templates/main_imgslider2.html
@@ -18,13 +18,13 @@ new(function(){});var d={cd:function(a){return a},Ed:function(a){return-a*(a-2)}
 </div>
 <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:1110px;height:540px;overflow:hidden;">
 <div>
-<img data-u="image" src="{% static 'img/main/visual1.jpg' %}" />
+<a href='#'><img data-u="image" src="{% static 'img/main/visual1.jpg' %}" /></a>
 </div>
 <div>
-<img data-u="image" src="{% static 'img/main/visual2.jpg' %}" />
+<a href="{% url 'main:dermotoxin' %}"><img data-u="image" src="{% static 'img/main/visual2.jpg' %}" /></a>
 </div>
 <div>
-<img data-u="image" src="{% static 'img/main/visual3.jpg' %}" />
+<a href="{% url 'main:lipolysis' %}"><img data-u="image" src="{% static 'img/main/visual3.jpg' %}" /></a>
 </div>
 </div>
 <!-- Bullet Navigator -->
