게시판 클릭시 네비바 변경

--- a/blog/templates/blog/counsel_list.html
+++ b/blog/templates/blog/counsel_list.html
@@ -28,3 +28,10 @@ HOME > 커뮤니티 > 온라인 상담
 	{% endif %}
 {% endblock %}
 
+{% block javascript %}
+<script type="text/javascript">
+	$(document).ready(function(){
+		activelist('#community1', '#community')
+	});
+</script>
+{% endblock javascript %}
