--- a/blog/templates/blog/review_list.html
+++ b/blog/templates/blog/review_list.html
@@ -28,3 +28,10 @@ HOME > 커뮤니티 > 고객 후기
 	{% endif %}
 {% endblock %}
 
+{% block javascript %}
+<script type="text/javascript">
+	$(document).ready(function(){
+		activelist('#community4', '#community')
+	});
+</script>
+{% endblock javascript %}
