--- a/blog/templates/blog/notice_list.html
+++ b/blog/templates/blog/notice_list.html
@@ -27,3 +27,10 @@
 	{% endif %}
 {% endblock %}
 
+{% block javascript %}
+<script type="text/javascript">
+	$(document).ready(function(){
+		activelist('#community3', '#community')
+	});
+</script>
+{% endblock javascript %}
