--- a/main/templates/main_imgslider3.html
+++ b/main/templates/main_imgslider3.html
@@ -18,13 +18,13 @@ new(function(){});var d={cd:function(a){return a},Ed:function(a){return-a*(a-2)}
 </div>
 <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:490px;height:460px;overflow:hidden;">
 <div>
-<img data-u="image" src="{% static 'img/main/visual8.jpg' %}" />
+<a href="{% url 'main:clinic' %}"><img data-u="image" src="{% static 'img/main/visual8.jpg' %}" /></a>
 </div>
 <div>
-<img data-u="image" src="{% static 'img/main/visual9.jpg' %}" />
+<a href="{% url 'main:clinic' %}"><img data-u="image" src="{% static 'img/main/visual9.jpg' %}" /></a>
 </div>
 <div>
-<img data-u="image" src="{% static 'img/main/visual10.jpg' %}" />
+<a href="{% url 'main:clinic' %}"><img data-u="image" src="{% static 'img/main/visual10.jpg' %}" /></a>
 </div>
 </div>
 <!-- Bullet Navigator -->
