--- a/main/templates/main_imgslider4.html
+++ b/main/templates/main_imgslider4.html
@@ -18,13 +18,13 @@ new(function(){});var d={cd:function(a){return a},Ed:function(a){return-a*(a-2)}
 </div>
 <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:654px;height:271px;overflow:hidden;">
 <div>
-<img data-u="image" src="{% static 'img/main/visual11.jpeg' %}" />
+<a href="{% url 'main:clinic' %}"><img data-u="image" src="{% static 'img/main/visual11.jpeg' %}" /></a>
 </div>
 <div>
-<img data-u="image" src="{% static 'img/main/visual12.jpeg' %}" />
+<a href="{% url 'main:clinic' %}"><img data-u="image" src="{% static 'img/main/visual12.jpeg' %}" /></a>
 </div>
 <div>
-<img data-u="image" src="{% static 'img/main/visual13.jpeg' %}" />
+<a href="{% url 'main:clinic' %}"><img data-u="image" src="{% static 'img/main/visual13.jpeg' %}" /></a>
 </div>
 </div>
 <!-- Bullet Navigator -->
