--- a/suclinic/templates/javascript.html
+++ b/suclinic/templates/javascript.html
@@ -9,5 +9,10 @@
 		$('li[data-target="'+ul+'"]').attr('aria-expanded', 'true');
 	}
 	$(document).ready(function() {
+		$("a[href='#top']").click(function() {
+		  $("html, body").animate({ scrollTop: 0 }, "slow");
+		  return false;
+		});
 	});
+
 </script>
