--- a/suclinic/templates/right.navbar.html
+++ b/suclinic/templates/right.navbar.html
@@ -5,7 +5,7 @@
 				<div class="container">
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav">
-						<li style="margin-top: 20px;"><a href="#" id="top"><img src="{% static 'img/right_top.png' %}" class="img-responsive"></a></li>
+						<li style="margin-top: 20px;"><a href="#top" id="top"><img src="{% static 'img/right_top.png' %}" class="img-responsive"></a></li>
 						{% if not user.is_authenticated %}
 							<li><a href="{% url 'accounts:signup' %}" style="font-weight: 500;color: white;font-size: 0.8em;">JOIN</a></li>
 						{% endif %}
